--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1316,7 +1316,6 @@ font-size: 15px;
 
 /* Caja del modal */
 .modal-content {
-  background: transparent;
   padding: 40px 50px;
   border-radius: 20px;
   text-align: center;
@@ -1390,9 +1389,11 @@ font-size: 15px;
 
   from{
     opacity: 0;
+    transform: scale(0.90);
   }
-    to{
+  to{
     opacity: 1;
+    scale: 1;
   }
 }
 
@@ -1748,9 +1749,14 @@ width: 100%;
 font-size: 15px;
 }
 
-/*
+
 .modal-content {
-  padding: 10px 10px;
-}*/
+  padding: 20px 15px;
+}
+
+.titulo-modal {
+  margin-top: 10px;
+  font-size: 19px;
+}
 
 }
