--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -501,8 +501,7 @@ margin: 0;
 }
 .backgraud-tasks{
   height: 100%;
-  background-color: white;
-  animation: cargaWindow .80s ease ;
+  animation: fadeIn .5s ease ;
 }
 .contenido_main{
   position: relative;
@@ -574,7 +573,7 @@ margin: 0;
 /* Agregar tareas*/
 .Nav_addTasks{
   display: grid;
-  grid-template-columns: 3% auto;
+  grid-template-columns: auto 2% ;
   padding: 6px;
   list-style: none;
   align-items: center;
@@ -661,6 +660,11 @@ margin: 0;
   z-index: 20;
   background-color: rgb(255, 255, 255);
 }
+.CuadroContendorAgTasks{
+  box-shadow: 0 0 5px gainsboro;
+  padding: 8px;
+  border-radius: 8px;
+}
 .contenedor_categoria .options.selected {
   background-color: #020580;
   color: #f5fdff;
@@ -668,12 +672,13 @@ margin: 0;
 
 .Categoria h4{
   margin: 0;
-  border: 1px solid gainsboro;
   width: auto;
-  border-radius: 6px;
   padding: 5px 5px;
-  color: #069caf;
-
+  color: #3f3f3f;
+  font-weight: normal;
+}
+#TituloProgamació{
+  border-bottom: 1px solid gainsboro;
 }
 .contenedor_categoria h3{
   margin: 0 0 10px 0;
@@ -752,7 +757,7 @@ margin: 0;
   border-radius: 6px;
 }
 .CateIcons{
-  font-size: 15spx;
+  font-size: 15px;
 }
 .task-cat{
   background: linear-gradient(40deg, rgb(250, 252, 255), rgb(236, 236, 236), rgb(247, 247, 248) );
@@ -770,7 +775,7 @@ margin: 0;
 .task-pro{
   font-size: 15px;
   padding: 6px 6px;
-  border-radius: 12px;
+  border-radius: 8px;
   text-align: center;
   border-bottom: 2px dashed gainsboro;
   font-weight: 500;
@@ -785,19 +790,27 @@ margin: 0;
 .horaio_día{
   margin-top: 12px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 16px;
-  margin-block-end: 26px;
+  margin-block-end: 8px;
 }
 .tiempo{
   border-radius: 10px;
   padding: 10px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 58% 28% auto;
   gap: 10px;
-  justify-content: center;
   color: #616161;
   cursor: pointer;
-  box-shadow: 0 0 10px gainsboro;
+  box-shadow: 0 0 0 1px gainsboro;
+}
+.Progmacion{
+  display: flex;
+  gap: 10px;
+}
+.programacionTasks{
+  font-size: 13px;
+  color: #a7a6a6;
 }
 .tiempo p{
   margin: 0;
@@ -805,7 +818,7 @@ margin: 0;
 }
 .tiempo i{
   font-size: 25px;
-   color: #77efff;
+  color: #77efff;
 }
 
 .importancia{
@@ -813,12 +826,13 @@ margin: 0;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   gap: 12px;
+  margin-bottom: 20px;
 }
 .proridad{
   margin-top: 9px ;
   padding: 8px;
   color: #494949;
-  background: white;
+  background: rgb(243, 248, 255);
   box-shadow: 0 0 6px  rgb(190, 190, 190);
   border-radius: 10px;
   cursor: pointer;
@@ -829,6 +843,7 @@ margin: 0;
   padding: 10px;
   display: grid;
   justify-content: center;
+  position: relative;
 }
 /*descrition*/
 .title_description{
@@ -847,7 +862,7 @@ margin: 0;
   margin-top: 16px;
   background: #ebeffc;
   display: grid;
-  grid-template-columns: auto 46%;
+  grid-template-columns: auto;
   gap: 10px;
   padding: 14px 10px;
 }
@@ -860,42 +875,20 @@ margin: 0;
 .descrition_box input{
    outline: none;
 }
-.repetición{
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 8px;
+.repetición i{
+  font-size: 16px;
+  margin-top: 4px;
 }
-.repetición p{
-  margin: 0;
-  padding: 4px;
-background-color:  #77efff38;
-border: 2px solid  #48e2f7;
-border-bottom: 6px solid  #01d5f1;
-color:  #01cfeb;
-  font-weight: bold;
-  border-radius: 8px;
-  width: 100%;
-  text-align: center;
+#openReloj i, #openCalandar i{
+  font-size: 16px;
+  margin-top: 4px;
 }
-#openOpiciones{
-padding: 8px 50px;
-border-radius: 8px;
-background-color:  #77efff38;
-border: 2px solid  #48e2f7;
-border-bottom: 6px solid  #01d5f1;
-color:  #01cfeb;
-font-weight: bold;
-transition: 0.5s ease;
-cursor: pointer;
-font-size: 15px;
-}
+
 .conten_repetion{
-  width: 200px;
-  height: 180px;
+  width: 334px;
   background: white;
   padding: 15px;
-  border: 1px solid rgb(145, 145, 145);
-  box-shadow: 0 0 30px rgb(206, 206, 206);
+  box-shadow: 0 0 20px rgb(206, 206, 206);
   border-radius: 10px;
   transition: 0.4s ease;
   overflow: hidden;
@@ -923,14 +916,13 @@ font-size: 15px;
 .repeticion_tasks.show{
   position: absolute;
   height: 100%;
-  transform: translateY(-190px) translateX(165px);
+  margin-top: 46px;
+  margin-left: -10px;
   z-index: 29;
   display:block;
   background: transparent;
 }
-#openOpiciones:hover{
-  scale: 1.02;
-}
+
 #Guadar-btn{
   padding: 12px 60px;
   border-radius: 8px;
@@ -1230,13 +1222,9 @@ font-size: 15px;
     transform: scale(1);
   }
 }
-@keyframes cargaWindow{
-  from{
-    opacity: 0.5;
-  }
-  to{
-    opacity: 1;
-  }
+@keyframes fadeIn {
+  from { opacity: 0.2; transform: translateY(5px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 @keyframes themeAnimation {
  
@@ -1667,7 +1655,7 @@ margin: 4px 0 0 0;}
 }
 /*subir tarea*/
 .Nav_addTasks{
-  grid-template-columns: 10% auto;}
+  grid-template-columns:  auto 6%;}
 .scroll_subir_task{
   padding: 0;
   margin-top: 20px;
@@ -1677,10 +1665,17 @@ margin: 4px 0 0 0;}
   position: relative;
 }
 
+/*==================*/
+.horaio_día{
+  grid-template-columns: repeat(1, 1fr);
+}
 .subir_tarea{
   position: fixed;
   width: 100%;
   height: 100%;
+}
+.conten_repetion{
+  width: 340px;
 }
 .contenido_main{
   display: block;
@@ -1707,19 +1702,18 @@ margin: 4px 0 0 0;}
   padding-top: 15px;
 }
 .tiempo{
-  justify-content: left;
+  grid-template-columns: 50% 36% auto;
 }
 .tiempo p{
   font-weight: normal;
   font-size: 13px;
 }
 .agregar{
-  justify-content: left;
+  justify-content:unset;
   padding: 0;
 }
 #Guadar-btn{
-width: 308px;
-
+  width: 100%;
 }
 /*descrition*/
 .title_description{
@@ -1737,21 +1731,9 @@ width: 308px;
   grid-template-columns: auto auto;
   gap:10px ;
 }
-.repetición p{
-  width: 100%;
-  padding: 10px 0;
-  text-align: center;
-}
-
-#openOpiciones{
-padding: 10px;
-width: 100%;
-font-size: 15px;
-}
-
 
 .modal-content {
-  padding: 20px 15px;
+  padding: 30px 15px;
 }
 
 .titulo-modal {
