--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -578,7 +578,7 @@ margin: 0;
   padding: 6px;
   list-style: none;
   align-items: center;
-  color: #464545;
+  color: #ffffff;
 }
 .Nav_addTasks i{
   font-size: 19px;
