--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -41,6 +41,7 @@ h1, h2, h3, h4, h5 {
   grid-template-columns: auto 40%;
   gap: 10px;
 }
+
 .tasksProyecAll h2{
   margin: 8px 0 0 0;
   color: #272626;
@@ -57,7 +58,7 @@ h1, h2, h3, h4, h5 {
   display: grid;
   grid-template-columns: auto auto;
   gap: 10px;
-  padding-left: 140px;
+  padding-left: 100px;
 }
 .perfil_user{
   display: grid;
@@ -117,6 +118,7 @@ h1, h2, h3, h4, h5 {
   grid-template-columns: 70% auto;
   gap: 8px;
 }
+
 .Saludo_noticias h3{
   margin: 0;
   color: white;
@@ -578,7 +580,7 @@ margin: 0;
   padding: 6px;
   list-style: none;
   align-items: center;
-  color: #ffffff;
+  color: #464545;
 }
 .Nav_addTasks i{
   font-size: 19px;
@@ -613,7 +615,7 @@ margin: 0;
   position: relative;
   padding: 0px;
   margin-top: 6px;
-  height: 373px;
+  height: 375px;
   overflow-y: auto;
   padding: 0 6px;
   padding-top: 6px;
@@ -753,18 +755,22 @@ margin: 0;
   color: #f5fdff;
   transform: scale(1.03);
 }
+.contentCatPro{
+  position: relative;
+  height: 34px;
+}
 .CateIcons{
   padding: 4px;
   border-radius: 6px;
 }
 .CateIcons{
-  font-size: 15px;
+  font-size: 13px;
 }
 .task-cat{
   background: linear-gradient(40deg, rgb(250, 252, 255), rgb(236, 236, 236), rgb(247, 247, 248) );
   box-shadow: 0 0 10px gainsboro;
   font-size: 14px;
-  border-radius: 12px;
+  border-radius: 8px;
   color: #069caf;
   text-align: center;
   font-size: 14px;
@@ -781,10 +787,7 @@ margin: 0;
   position: absolute;
   width: 100%;
 }
-.contentCatPro{
-  position: relative;
-  height: 34px;
-}
+
 /*Horario*/
 .horaio_día{
   margin-top: 12px;
@@ -968,7 +971,7 @@ margin: 0;
 }
 .task-item{
   display: grid;
-  grid-template-columns: 54% 20% auto 2%;
+  grid-template-columns: 50% 24% auto 2%;
   box-shadow: 0 0 5px rgba(170, 170, 170, 0.781);
   gap: 20px;
   transition: 0.90s ease-out;
@@ -984,7 +987,7 @@ margin: 0;
   flex-grow: 5;
   padding-top: 6px ;
   margin-left: 8px;
-  font-size: 14px;
+  font-size: 15px;
 }
 .box_tasks_text{
   display: grid;
@@ -1121,14 +1124,6 @@ margin: 0;
 }
 /*=================================*/
 
-.delete-btn {
-  background: rebeccapurple;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  cursor: pointer;
-  color: rgb(255, 0, 140);
-}
 .openEditar{
   font-size: 16px;
   padding-top: 8px;
@@ -1154,11 +1149,17 @@ margin: 0;
   width: 100%;
   height: 100%;
   z-index: 30;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(6px);
+}
+.backgrauEditar{
+  background: rgba(0, 0, 0, 0.568);
+  backdrop-filter: blur(2px);
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+ animation: intro2 .5s ease-in-out;
 }
+
 .cuerpo_modal{
   position: relative;
   overflow: hidden;
@@ -1168,8 +1169,7 @@ margin: 0;
   height: 500px;
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
-  box-shadow: 4px 9px 10px slateblue;
-  animation: intro 0.4s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
 }
 .header-editar{
   display: grid;
@@ -1188,10 +1188,19 @@ margin: 0;
   margin: 3px;
   font-weight: bold;
 }
-.Closeeditar{
+.Closeeditar {
   font-size: 25px;
-
+  cursor: pointer;
+  display: inline-block; /* MUY IMPORTANTE */
+  transition: transform 0.5s ease;
+  transform-origin: center;
 }
+
+.Closeeditar:hover {
+  transform: rotateY(180deg);
+}
+
+
 .footer-editar{
   position: absolute;
   width: 100%;
@@ -1203,30 +1212,103 @@ margin: 0;
 .contenido-editar{
   padding: 8px;
   overflow-y: auto;
-  height: 300px;
+  height: 100%;
 }
 .input-editar input{
-  width: 97%;
+  width: 100%;
   padding: 12px 6px;
   font-size: 15px;
-  font-weight: bold;
-  color: #818181;
-  border: none;
+  color: #424242;
+  border: 2px solid transparent;
+  border-bottom: 2px solid gainsboro;
+  border-radius: 0;
+  transition: 0.5s ease;
+  font-family:  'Poppins', sans-serif;
+}
+.input-editar input:focus{
+  outline: none;
+  border-radius: 8px;
+  border: 2px solid rgb(119, 0, 255);
 }
 
+.contenedor_Editar{
+  margin-top: 10px;
+  position: relative;
+  display: flex;
+  gap: 10px;
+  overflow-y: auto;
+  padding: 8px 2px;
+  height: 60px;
+}
+.contenedor_Editar::-webkit-scrollbar{
+  display: none;
+}
+.options2{
+  flex: 0 0 8.6rem;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: auto 10%;
+  gap: 5px;
+  padding: 10px 8px;
+  border-radius: 8px;
+  margin-top: 5px;
+  color: #818181;
+  box-shadow: 0 0 0 1px gainsboro;
+  transition: 0.50s ease-in-out;
+  justify-content: center;
+}
+.options2 p{
+  margin: 0;
+  font-size: 15px;
+}
+.ProgramacionEditar{
+  display: grid;
+  grid-template-columns:repeat(2, 1fr);
+  width: 100%;
+  gap: 9px;
+}
+.ProgramacionEditar p{ font-size: 15px;}
+.btnEditarProgrmacion{
+  margin-top: 10px;
+  box-shadow: 0 0 0 1px gainsboro;
+  padding: 12px 8px;
+  background: #eef9ff;
+  border-radius: 8px;
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+}
+.eliminarTasks{
+  margin-top: 16px;
+}
+
+.delete-btn {
+  background: #ffe6eb;
+  padding: 12px 8px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  color: rgb(255, 0, 64);
+  width: 100%;
+  transition: .3s ease-in-out;
+}
+.delete-btn:hover {
+  scale: 0.98;
+  background: #fad8df;
+}
 /*=============== Animaciones ====================*/
-@keyframes intro{
+
+@keyframes intro2{
   from{
     opacity: 0;
-    transform: scale(.90);
   }
   to{
     opacity: 1;
-    transform: scale(1);
   }
 }
 @keyframes fadeIn {
-  from { opacity: 0.2; transform: translateY(5px); }
+  from { opacity: 0.2; transform: translateY(4px); }
   to { opacity: 1; transform: translateY(0); }
 }
 @keyframes themeAnimation {
@@ -1419,7 +1501,6 @@ margin: 0;
     overflow: auto;
   }
 .container_main{
-  overflow: auto;
   grid-template-columns: auto;
   height: 100%;
 }
@@ -1464,7 +1545,7 @@ margin: 0;
 }
 #taskList{
   padding: 4px;
-  height: 400px;
+  height: 600px;
   padding-block-end: 10px;
 }
 .task-item{
@@ -1573,6 +1654,9 @@ margin: 4px 0 0 0;}
   grid-template-columns: auto;
   position: relative;
 }
+.tasksProyecAll{
+  grid-column: 1 / span 2;
+}
 /*Perfil*/
 .NavMovil{
   display: block;
@@ -1585,7 +1669,11 @@ margin: 4px 0 0 0;}
   left: 0;
   z-index: 40;
 }
-
+.foto_perfil img{
+  width: 30px;
+  height: 30px;
+  margin: 2px 0 0 0;
+}
 .Notificaciones i{
   font-size: 20px;
   margin-top: 8px;
@@ -1695,7 +1783,7 @@ margin: 4px 0 0 0;}
   padding: 14px;
 }
 .options{
-  flex: 0 0 9.1rem;
+  flex: 0 0 9.3rem;
   cursor: pointer;
   display: grid;
   grid-template-columns: auto 10%;
@@ -1733,7 +1821,18 @@ margin: 4px 0 0 0;}
   grid-template-columns: auto auto;
   gap:10px ;
 }
-
+/*=============================*/
+.cuerpo_modal{
+  position: relative;
+  overflow: hidden;
+  margin-top: 50px;
+  padding-top: 50px;
+  width: 600px;
+  height: 94%;}
+  .options2{
+  flex: 0 0 7rem;
+  }
+/*=============================*/
 .modal-content {
   padding: 30px 15px;
 }
