--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -178,17 +178,18 @@ h1, h2, h3, h4, h5 {
   border: 1px solid gainsboro;
 }
 .name_Users{
-  position: relative;
-  width: 100%;
   height: 28px;
-  overflow:scroll;
-  display: grid;
-  grid-template-columns: 1fr;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
 }
 .contenNameUser{
-  width: 100%;
+  position: relative;
+  height: 28px;
+  overflow:auto;
+  display: flex;
 }
-.name_Users::-webkit-scrollbar{
+.contenNameUser::-webkit-scrollbar{
   display: none;
 }
 .perfil_user h5{margin: 6px 0 0 0; width: 100%; } 
@@ -1238,16 +1239,16 @@ margin: 0;
 
 }
 .editar_item{
-  display: none;
+  display: block;
   background-color: #020580;
 }
-.editar_item.active{
+.editar_item, .active{
   display: block;
 }
 .Editar_targeta{
-  display: none;
+  display: block;
 }
-.Editar_targeta.active{
+.Editar_targeta, .active{
   display: block;
   position: fixed;
   top:0;
@@ -1270,9 +1271,10 @@ margin: 0;
   position: relative;
   overflow: hidden;
   margin-top: 50px;
+  padding: 12px;
   padding-top: 50px;
   width: 600px;
-  height: 500px;
+  height: 530px;
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
   animation: fadeIn 0.4s ease-in-out;
@@ -1281,6 +1283,7 @@ margin: 0;
   display: grid;
   grid-template-columns: 93% auto;
   top: 0;
+  left: 0;
   padding: 8px;
   position: absolute;
   background: linear-gradient(to right, #d6f1f8, #8ce9fa);
@@ -1292,7 +1295,6 @@ margin: 0;
   font-size: 14px;
   color: #818181;
   margin: 3px;
-  font-weight: bold;
 }
 .Closeeditar {
   font-size: 25px;
@@ -1306,20 +1308,15 @@ margin: 0;
   transform: rotateY(180deg);
 }
 
-
-.footer-editar{
-  position: absolute;
-  width: 100%;
-  height: 50px;
-  bottom: 0;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0 -4px 5px rgba(220, 220, 220, 0.63);
-}
 .contenido-editar{
   padding: 8px;
   overflow-y: auto;
-  height: 100%;
+  height: 90%;
 }
+.contenido-editar::-webkit-scrollbar{
+  display: none;
+}
+
 .input-editar input{
   width: 100%;
   padding: 8px 6px;
@@ -1343,14 +1340,14 @@ margin: 0;
   display: flex;
   gap: 10px;
   overflow-y: auto;
-  padding: 8px 2px;
+  padding: 8px 1px;
   height: 60px;
 }
 .contenedor_Editar::-webkit-scrollbar{
   display: none;
 }
 .options2{
-  flex: 0 0 8.6rem;
+  flex: 0 0 10rem;
   cursor: pointer;
   display: grid;
   grid-template-columns: auto 10%;
@@ -1360,48 +1357,161 @@ margin: 0;
   margin-top: 5px;
   color: #818181;
   box-shadow: 0 0 0 1px gainsboro;
-  transition: 0.50s ease-in-out;
+  transition: 0.20s ease-in-out;
   justify-content: center;
 }
 .options2 p{
   margin: 0;
-  font-size: 15px;
+  font-size: 14px;
+}
+.options2:hover{
+  background-color: #020580;
+  color: #f5fdff;
+ }
+
+.contentSeccionesEditar{
+  box-shadow: 0 0 8px gainsboro;
+  border-radius: 8px;
+  margin-bottom: 16px;
+
+}
+
+.contentSeccionesEditar h5,.contentSeccionesEditar h5 {
+  margin-top: 10px;
+  font-weight: normal;
+  box-shadow: 0 1px 1px gainsboro;
+  left: 0;
+  padding: 6px 8px;
+
 }
 .ProgramacionEditar{
+  position: relative;
   display: grid;
-  grid-template-columns:repeat(2, 1fr);
+  grid-template-columns:repeat(3, 1fr);
   width: 100%;
   gap: 9px;
+  margin-top: 8px;
+  padding: 8px 8px 20px 8px;
 }
-.ProgramacionEditar p{ font-size: 15px;}
 .btnEditarProgrmacion{
-  margin-top: 10px;
   box-shadow: 0 0 0 1px gainsboro;
-  padding: 12px 8px;
-  background: #eef9ff;
+  padding: 9px 8px;
+  background-color: #020580;
+  color: #f5fdff;
   border-radius: 8px;
   display: flex;
   gap: 4px;
   justify-content: center;
 }
+.ProgramacionEditar p{ font-size: 14px;}
+.ProridadEditar{
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 9px;
+  margin-top: 8px;
+  padding: 8px 8px 20px 8px;
+}
+.ProridadEditar button{
+  width: 100%;
+  padding: 9px 8px;
+  box-shadow: 0 0 0 1px gainsboro;
+  padding: 9px 8px;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Poppins', sans-serif;
+  transition: .3s ease-in-out;
+}
+.ProridadEditar button:hover{
+  scale: .98;
+  background: #e3f2f7;
+}
+
+.descripcionEditar{
+  box-shadow: 0 0 8px gainsboro;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.descripcionEditar label{
+  font-size: 14px;
+  box-shadow: 0 1px 1px gainsboro;
+  left: 0;
+  padding: 6px 8px;
+  margin-bottom: 10px;
+}
+.descripcionEditar textarea{
+  margin: 8px 8px 20px 8px;
+  border-radius: 8px;
+  height: 100px;
+  padding: 8px;
+  font-family:'Poppins', sans-serif; 
+  transition: .3s ease-in-out;
+  border: 2px solid gainsboro;
+}
+.descripcionEditar textarea:focus{
+  outline: none;
+  border-radius: 8px;
+  border: 2px solid rgb(119, 0, 255);
+}
 .eliminarTasks{
+  box-shadow: 0 0 8px gainsboro;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  display: grid;
   margin-top: 16px;
+  margin-bottom: 22px;
+  grid-template-columns: 3% 74% auto;
+  padding: 8px 10px 8px 16px;
+  gap: 10px;
+  align-items: center;
+}
+.eliminarTasks h5{
+  font-weight: normal;
+  left: 0;
 }
 
 .opentAviso {
-  background: #ffe6eb;
-  padding: 12px 8px;
+  background: #ffe6ebcc;
+  padding: 12px 5px;
   border: none;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 14px;
   cursor: pointer;
   color: rgb(255, 0, 64);
-  width: 100%;
   transition: .3s ease-in-out;
 }
 .opentAviso:hover {
   scale: 0.98;
   background: #fad8df;
+}
+
+.footer-editar{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  border-top: 1px solid gainsboro;
+  padding: 15px 100px;
+}
+.btnGuardarCambios{
+  cursor: pointer;
+  width: 100%;
+  padding: 12px 8px;
+  background:#bbdbf5 ;
+  color: #0004ff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: .3s ease;
+  font-weight: 600;
+}
+.btnGuardarCambios:hover{
+   background:#bbbcff ;
+   scale: .99;
 }
 /*=============== Animaciones ====================*/
 
@@ -1673,8 +1783,9 @@ body{
 
 }
 #taskList{
+  height: auto;
   padding: 4px;
-  height: 600px;
+  max-height: 600px;
   padding-block-end: 10px;
 }
 .task-item{
@@ -1957,10 +2068,18 @@ margin: 4px 0 0 0;}
   margin-top: 50px;
   padding-top: 50px;
   width: 600px;
-  height: 94%;}
-  .options2{
-  flex: 0 0 7rem;
-  }
+  height: 94%;
+}
+.options2{
+  flex: 0 0 10.5rem;
+}
+.eliminarTasks{
+  grid-template-columns: 6% 60% auto;
+  margin-bottom: 8px;
+}
+.footer-editar{
+  padding: 15px 20px;
+}
 /*=============================*/
 .modal-content {
   padding: 30px 15px;
