--- a/docs/assets/css/login.css
+++ b/docs/assets/css/login.css
@@ -315,6 +315,7 @@ body{
     box-shadow: inset 0 0 0 1px 12px;
     transition: 0.25s ease; 
     border-radius: 12px;
+    font-family: 'Poppins', sans-serif;
 }
 .inputs:focus-within {
   box-shadow:
@@ -341,7 +342,7 @@ body{
     background: #e8efff;
     color: rgb(90, 90, 90);
     transition: 0.30s ease-in-out;
-
+   font-family: 'Poppins', sans-serif;
 }
 
 .inputs-layout input:focus{
