--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -62,8 +62,8 @@ h1, h2, h3, h4, h5 {
   background: #000000;
   color: white;
 }
-
-.advertenciaDelete.active{
+/*================================*/
+.advertenciaDelete, .active{
   position: fixed;
   width: 100%;
   height: 100%;
@@ -73,7 +73,7 @@ h1, h2, h3, h4, h5 {
   display: block;
 }
 .advertenciaDelete{
-  display: none;
+  display: block;
 }
 .backgrundAviso{
   width: 100%;
@@ -112,27 +112,39 @@ h1, h2, h3, h4, h5 {
   font-weight: normal;
   color: #000000;
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
+  font-family: 'Inter', sans-serif;
 }
 .headerMainAviso{
   width: 100%;
   padding: 8px;
-  box-shadow: 0 1px 1px gainsboro;
+  box-shadow: 0 1px 1px rgb(253, 211, 211);
 }
 .headerMainAviso p{
-  font-size: 12px;
-  color: #949494;
+  font-size: 16px;
+  color: #302f2f;
+  text-align: center;
+  font-weight: 600;
 }
 .headerAviso{
   display: flex;
   justify-content: center;
+}
+.textAviso{
+  padding:16px ;
+}
+.textAviso p{
+  font-size: 14px;
+  color: #525252;
+  text-align: center;
+  margin-top: 6px;
 }
 .ContentAvisoDelete i{
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin: 20px 0 10px 0;
+  margin: 20px 0 0px 0;
   border-radius: 50%;
   height: 50px;
   width: 50px;
@@ -141,11 +153,10 @@ h1, h2, h3, h4, h5 {
   color: salmon;
 }
 .botonAviso {
-  margin-top: 10px;
-  padding: 10px 0 20px 0;
-  display: flex;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
-  justify-content: center;
   align-items: center;
 }
 .botonAviso button {
@@ -1777,7 +1788,6 @@ margin: 0;
 @media (max-width: 700px){
 
 /*Avisos del sistema*/
-/*Avisos del sistema*/ 
 .msgsConfirmacion{
   position: fixed;
   z-index: 30;
@@ -1803,7 +1813,7 @@ margin: 0;
   font-size: 13px;
 }
 .textAviso{
-  padding: 0 8px;
+  padding: 16px;
 }
 /*==================*/  
 body{
