--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -28,11 +28,11 @@ h1, h2, h3, h4, h5 {
 .contentMsg{
   width: auto;
   max-width: 600px;
-  padding: 10px;
+  padding:  14px 16px;
   position: relative;
   display: grid;
   grid-template-columns: 2% auto;
-  gap: 20px;
+  gap: 25px;
   align-items: center;
   background: white;
   box-shadow: 0  8px 30px rgb(214, 214, 214);
@@ -51,13 +51,14 @@ h1, h2, h3, h4, h5 {
 
 .contentMsg h5{
   font-weight: 600;
+  font-size: 15px;
   color: #313131;
   font-family: 'Inter', sans-serif;
 }
 .contentMsg i{
-  height: 20px;
-  width: 20px;
-  font-size: 12px;
+  height: 22px;
+  width: 22px;
+  font-size: 14px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -1321,7 +1322,7 @@ margin: 0;
   display: block;
 }
 .Editar_targeta{
-  display: block;
+  display: none;
 }
 .Editar_targeta.active{
   display: block;
@@ -1356,19 +1357,18 @@ margin: 0;
 }
 .header-editar{
   display: grid;
-  grid-template-columns: 93% auto;
+  grid-template-columns: 97% auto;
   top: 0;
   left: 0;
-  padding: 8px;
+  padding: 8px 18px;
   position: absolute;
-  background: linear-gradient(to right, #d6f1f8, #8ce9fa);
   width: 100%;
   box-shadow: 0 3px 5px rgba(220, 220, 220, 0.63);
   z-index: 17;
 }
 .header-editar p{
-  font-size: 14px;
-  color: #818181;
+  font-weight: 600;
+  font-size: 17px;
   margin: 3px;
 }
 .Closeeditar {
@@ -1381,7 +1381,7 @@ margin: 0;
 
 .Closeeditar:hover {
   transform: rotateY(180deg);
-    color: rgb(0, 26, 255) ;
+  color: rgb(0, 26, 255) ;
 }
 
 .contenido-editar{
@@ -1396,8 +1396,9 @@ margin: 0;
 .input-editar input{
   width: 100%;
   padding: 8px 6px;
-  font-size: 15px;
-  color: #424242;
+  font-size: 14px;
+  color: #313131;
+  font-weight: 600;
   border: 2px solid transparent;
   border-bottom: 2px solid gainsboro;
   border-radius: 0;
@@ -2168,15 +2169,19 @@ margin: 4px 0 0 0;}
 .backgrauEditar{
   justify-items: auto;
 }
+.header-editar{
+
+  grid-template-columns: 95% auto;
+}
 .cuerpo_modal{
   position: relative;
   overflow: hidden;
   top: 0;
+  margin-top: 0;
   padding-top: 50px;
   width: 600px;
-  height: 93%;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  height: 100%;
+  border-radius: 0;
 }
 .options2{
   flex: 0 0 10rem;
